# ansible-role-python

./: .bumplus.toml  .bumpversion.cfg  .editorconfig  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .tmuxinator.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.rst  docker-compose.yml  setup.cfg  wercker.yml
defaults/: main.yaml
docs/source/: CONTRIBUTING.rst
extras/make/: docker.mk
meta/: main.yml
molecule/default/: INSTALL.rst  molecule.yml  playbook.yml
molecule/default/tests/: test_default.py
molecule/default/vars/: config.yaml
molecule/pipenv/: molecule.yml
molecule/pipenv/tests/: test_default.py
molecule/pipenv/vars/: config.yaml
provision/docker-compose/: dev.yml  test.yml
provision/docker/app/: Dockerfile
provision/docker/check/: Dockerfile
provision/docker/web/: Dockerfile
requirements/: setup.txt  test.txt
tasks/: configure.yaml  delete_virtualenvs.yaml  dependences.yaml  environment.yaml  files.yaml  include_vars.yml  install.yaml  main.yaml  pip.yaml  post_install.yaml
tasks/install.d/: CentOS.yaml  Ubuntu.yaml
templates/: .environmentrc.j2  .pyenvrc.j2  .pyenvrunrc.j2
tests/: test.yaml
vars/: CentOS.yaml  Ubuntu.yaml  main.yaml
