[bumpversion]
files = README.rst
commit = False
tag = False
current_version = 0.2.2

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[metadata]
description-file = README.rst

[flake8]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[isort]
line_length = 100
default_section = THIRDPARTY
atomic=true
known_standard_library=types
combine_as_imports = true
include_trailing_comma = true
known_first_party=./
known_third_party=tests
not_skip = __init__.py
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
python_files = "molecule/**/tests.py" "molecule/**/test_*.py" "molecule/**/tests/test_*.py" "*test.py"
norecursedirs = "build" "docs" "docs[\/]_build" ".egg" "node_modules" "provision" "requirements"
addopts =
    -s -v
    -rxXs
    --cov ansible-role-python
    --cov-report html
    --no-cov-on-fail
    --capture=no
    --ignore docs
    --ignore .egg
    --ignore .eggs
    --ignore .mypy_cache
    --ignore provision
    --doctest-modules
